Add new helper functions for writing JSON with one allocation
The helper functions support a two pass algorithm to convert
a given structure into a string. The first pass computes the
expected length of the string, and the second pass actually
fills a given buffer with that many characters.

These functions are intended to be used to replace the current
JSON writing code, which constructs an object tree with
dynamically allocated nodes. Testing for allocation failure
would make the code significantly more complicated.

Surveying JSON libraries written in C reveals that most either
do not account for memory allocation failure (ex. YAJL, used by
i3), construct the JSON object tree in memory before serializing
it (ex. json-c), or only provide a parser.

--- a/common/meson.build
+++ b/common/meson.build
@@ -4,6 +4,7 @@ lib_sway_common = static_library(
 		'background-image.c',
 		'cairo.c',
 		'ipc-client.c',
+                'jswrt.c',
 		'log.c',
 		'loop.c',
 		'list.c',
