--- a/sway/meson.build
+++ b/sway/meson.build
@@ -5,7 +5,9 @@ sway_sources = files(
 	'decoration.c',
 	'ipc-json.c',
 	'ipc-server.c',
+	'lock.c',
 	'main.c',
+	'security.c',
 	'server.c',
 	'swaynag.c',
 	'xdg_activation_v1.c',
@@ -67,6 +69,7 @@ sway_sources = files(
 	'commands/gaps.c',
 	'commands/hide_edge_borders.c',
 	'commands/inhibit_idle.c',
+	'commands/lock_screen.c',
 	'commands/kill.c',
 	'commands/mark.c',
 	'commands/max_render_time.c',
